--- a/.github/workflows/update_aur.yml
+++ b/.github/workflows/update_aur.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install dependencies
-        run: pacman -Sy --noconfirm base-devel git jq curl sudo
+        run: pacman -Sy --noconfirm base-devel git jq curl sudo openssh
 
       - name: Create non-root user
         run: |
