--- a/.github/workflows/update_aur.yml
+++ b/.github/workflows/update_aur.yml
@@ -34,6 +34,11 @@ jobs:
 
           sudo -u aurbuild bash -c "makepkg --printsrcinfo > .SRCINFO"
 
+      - name: Setup SSH known_hosts
+        run: |
+          mkdir -p ~/.ssh
+          ssh-keyscan aur.archlinux.org >> ~/.ssh/known_hosts
+
       - name: Clone AUR repo
         env:
           AUR_SSH_KEY: ${{ secrets.AUR_SSH_KEY }}
